--- a/package.xml
+++ b/package.xml
@@ -3,41 +3,50 @@
   <name>robot_collector</name>
   <version>0.0.0</version>
   <description>The robot_collector package</description>
-
  
   <maintainer email="andrelgferreira1@gmail.com">Andre</maintainer>
   <maintainer email="psanhuez@umd.edu">Pablo</maintainer>
   <maintainer email="ryanc1934@gmail.com">Ryan</maintainer>
-
  
   <license>MPL 2.0</license>
-
-
   
   <url type="website">https://github.com/sanhuezapablo/robot_collector</url> 
 
-
- 
   <author email="andrelgferreira1@gmail.com">Andre</author> 
   <author email="psanhuez@umd.edu">Pablo</author> 
   <author email="ryanc1934@gmail.com">Ryan</author> 
-
-
   
   <buildtool_depend>catkin</buildtool_depend>
+
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>ar_track_alvar</build_depend>
+  <build_depend>move_base</build_depend>
+  <build_depend>gazebo</build_depend>
+  <build_depend>gazebo_ros</build_depend>
+
+  <build_export_depend>roscpp</build_export_depend>
+  <build_export_depend>rospy</build_export_depend>
+  <build_export_depend>std_msgs</build_export_depend>
+  <build_export_depend>message_generation</build_export_depend>
+  <build_export_depend>ar_track_alvar</build_export_depend>
+  <build_export_depend>move_base</build_export_depend>
+  <build_export_depend>gazebo</build_export_depend>
+  <build_export_depend>gazebo_ros</build_export_depend>
+
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>message_runtime</exec_depend>
-
+  <exec_depend>ar_track_alvar</exec_depend>
+  <exec_depend>move_base</exec_depend>
+  <exec_depend>gazebo</exec_depend>
+  <exec_depend>gazebo_ros</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
-
   </export>
 </package>
