[CMakeLists.txt][Task 3.21] Updated CMakeLists.txt setting to compile for coverage. This enables the coverage results to be sent to Coveralls.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ target_link_libraries(robot_collector ${catkin_LIBRARIES})
 
 if(CATKIN_ENABLE_TESTING)
   find_package(rostest REQUIRED)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0 --coverage")
   add_rostest_gtest(
     robot_collector_test
     test/test.launch
