[World][Task 3.22] Updating gazebo world, ar_blocks configurations, cost map for navigation and path planning.

--- a/World/models/ar_block2/model.config
+++ b/World/models/ar_block2/model.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <model>
-   <name>AR Block</name>
+   <name>ar_block2</name>
    <version>1.0</version>
    <sdf version="1.4">model.sdf</sdf>
    <description>Block with AR tag.</description>
